edited colors. fixed word wrap on flip cards. added shadows to bars.

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -543,7 +543,7 @@ section {
   /* background-color: antiquewhite; */
   position: relative;
   background: rgb(255,48,32);
-  background: linear-gradient(90deg, rgba(200,48,32,1) 0%, rgba(255,255,255,1) 18%, rgba(255,255,255,1) 82%, rgba(200,48,32,1) 100%); 
+  background: linear-gradient(90deg, rgb(182, 145, 140) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(182, 145, 140) 100%); 
   z-index: 500;
 }
 
