--- a/client/src/components/heroBar.css
+++ b/client/src/components/heroBar.css
@@ -7,7 +7,10 @@
   margin-top: 0px;
   border-bottom: solid rgb(151, 16, 16);
   border-width: 10px;
+  box-shadow: 0 2px 4px black, 0 -2px 4px black;
   border-bottom-style: groove;
+  position: relative;
+  z-index: 9999;
 }
 
 .hero-bar-mid {
@@ -23,7 +26,8 @@
   border-top-style: groove;
   border-bottom-style: groove;
   position: relative;
-  /* z-index: 9999; */
+  box-shadow: 0px 2px 4px black, 0 -2px 4px black;
+  z-index: 9999;
 }
 
 .hero-bar-bottom {
@@ -39,6 +43,7 @@
   border-top-style: groove;
   border-bottom-style: groove;
   text-align: center;
+  box-shadow: 0 -2px 4px black;
 }
 /* 
 @media screen and (max-height: 930px) {
